[package]
name = "rustypographe"
version = "0.0.1"
edition = "2021"
authors = ["Firmin Launay <Firmin_Launay@etu.u-bourgogne.fr>"]
description = "Typography checker and enforcer for the French language."
readme = "README.md"
repository = "https://github.com/Firmin-ESIREM/rustypographe"
license = "MIT"
license-file = "LICENSE"

[dependencies]
duplicate = "1.0.0"
